# TEP_labs

Lista1/: CMakeLists.txt  main.cpp
Lista1/src/: CTable.cpp  CTable.h  Exercise1.cpp  Exercise1.h  Exercise2.cpp  Exercise2.h  Exercise3.cpp  Exercise3.h  Helpers.cpp  Helpers.h
Lista2/: CMakeLists.txt  main.cpp
Lista2/src/: CMatrix.cpp  CMatrix.h  CTable.cpp  CTable.h  Helpers.cpp  Helpers.h
Lista3/: CMakeLists.txt  main.cpp
Lista3/src/: Modyfikacja.txt
Lista3/src/CNodeDynamic/: CNodeDynamic.cpp  CNodeDynamic.h
Lista3/src/CNodeStatic/: CNodeStatic.cpp  CNodeStatic.h
Lista3/src/CTreeDynamic/: CTreeDynamic.cpp  CTreeDynamic.h
Lista3/src/CTreeStatic/: CTreeStatic.cpp  CTreeStatic.h
Lista4/: CMakeLists.txt  main.cpp
Lista4/src/: CNodeDynamic.h  CTreeDynamic.h
Lista5/: CMakeLists.txt  main.cpp
Lista5/src/: CMySmartPointer.h  CTab.cpp  CTab.h  CTable.cpp  CTable.h
Projekt/: CMakeLists.txt  main.cpp
Projekt/src/: CGeneticAlgorithm.cpp  CGeneticAlgorithm.h  CIndividual.cpp  CIndividual.h  CKnapsackProblem.cpp  CKnapsackProblem.h  knapsack_4_5.txt  knapsack_6_5.txt
test/: CMakeLists.txt  Exercise1.cpp  Exercise1.h  Matrix.cpp  Matrix.h  main.cpp
